<resources>
    <string name="app_name">Dramady</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="popular_now">Popular now</string>
    <string name="all_time_best_movies">All time best movies</string>
    <string name="favorites_list">Favorites list</string>
    <string name="watch_list">To watch list</string>
    <string name="search_page">Search page</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="search_search_page">Search!</string>
    <string name="genres_list_item">Genres:</string>
    <string name="stars_list_item">Stars:</string>
    <string name="movie_page">Movie Page</string>
    <string name="log_in">Log in</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Reviews">Reviews</string>
    <string name="View_Reviews">View Reviews</string>
    <string name="leave_note">Leave Note</string>
    <string name="submit">Submit!</string>
    <string name="createReview">Create Review</string>
    <string name="updateReview">Update Review</string>
    <string name="myreview">My review:</string>
    <string name="content_review">Content of the review</string>
    <string name="message_check_internet">Check your internet connection and restart the app</string>
    <string name="empty_list">The list is empty</string>
    <string name="russian_button">Russian</string>
    <string name="language_button">Language</string>
    <string name="english_button">English</string>
    <string name="toast_search_length">Please enter minumum 3 symbols</string>
    <string name="internet_alert">No internet connection</string>
    <string name="internet_alert_desc">Offline mode, Search is not available</string>
    <string name="internet_button">Ok</string>
    <string name="search_movie_hint">Search movie by title</string>
    <string name="search_page_fetch_fail">Error, check internet</string>
</resources>