<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/search_page"
            android:icon="@drawable/trend_up"
            android:title="@string/search_page" />
        <item
            android:id="@+id/popular_now"
            android:icon="@drawable/trend_up"
            android:title="@string/popular_now" />
        <item
            android:id="@+id/all_time_best"
            android:icon="@drawable/ic_film"
            android:title="@string/all_time_best_movies" />
        <item
            android:id="@+id/watch_list"
            android:icon="@drawable/ic_clock"
            android:title="@string/watch_list" />

        <item
            android:id="@+id/favorite_list"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites_list" />
    </group>
</menu>