<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/search_page">


    <fragment
        android:id="@+id/search_page"
        android:name="com.group16.dramady.ui.fragments.SearchPageFragment"
        android:label="Dramady"
        tools:layout="@layout/fragment_search_page" />


    <fragment
        android:id="@+id/popular_now"
        android:name="com.group16.dramady.ui.fragments.MoviesListFragment"
        android:label="@string/popular_now"
        tools:layout="@layout/fragment_movies_list">
        <action
            android:id="@+id/action_popular_now_to_moviePageFragment"
            app:destination="@id/moviePageFragment" />
    </fragment>

    <fragment
        android:id="@+id/all_time_best"
        android:name="com.group16.dramady.ui.fragments.MoviesListFragment"
        android:label="@string/all_time_best_movies"
        tools:layout="@layout/fragment_movies_list" />

    <fragment
        android:id="@+id/watch_list"
        android:name="com.group16.dramady.ui.fragments.MoviesListFragment"
        android:label="@string/watch_list"
        tools:layout="@layout/fragment_movies_list" />

    <fragment
        android:id="@+id/favorite_list"
        android:name="com.group16.dramady.ui.fragments.MoviesListFragment"
        android:label="@string/favorites_list"
        tools:layout="@layout/fragment_movies_list" />
    <fragment
        android:id="@+id/moviePageFragment"
        android:name="com.group16.dramady.ui.fragments.MoviePageFragment"
        android:label="@string/movie_page"
        tools:layout="@layout/fragment_movie_page" />
    <fragment
        android:id="@+id/review"
        android:name="com.group16.dramady.ui.fragments.Review"
        android:label="@string/Reviews"
        tools:layout="@layout/fragment_review" />


</navigation>